<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_elderly">

    <EditText
        android:id="@+id/fullname"
        android:layout_width="292dp"
        android:layout_height="50dp"
        android:layout_below="@+id/fullname_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="89dp"
        android:background="@drawable/rounded_textedit"
        android:ems="10"
        android:hint="@string/elderly_name"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname_text" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="190dp"
        android:text="Choose routines"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <TextView
        android:id="@+id/fullname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="273dp"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_routine"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_button"
        android:text="@string/add_routines"
        android:textColor="@color/white"
        app:backgroundTint="@color/teal_200" />

    <Button
        android:id="@+id/add_person"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_button"
        android:text="@string/add_person"
        android:textColor="@color/white"
        app:backgroundTint="@color/teal_200" />

    <ListView
        android:id="@+id/list_routines"
        android:layout_width="wrap_content"
        android:layout_height="200sp"
        android:layout_below="@+id/description_text"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-4dp"
        android:layout_marginBottom="154dp"
        android:layout_marginStart="33dp"
        android:choiceMode="multipleChoice" />

</RelativeLayout>