<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_routine">

    <TextView
        android:id="@+id/descname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Routine name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toEndOf="@+id/description_routine3"
        app:layout_constraintTop_toBottomOf="@+id/add_picture">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:src="@drawable/newicon" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toEndOf="@+id/description_routine2"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <ImageView
            android:id="@+id/profile_image2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:src="@drawable/newicon" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toEndOf="@+id/description_routine5"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <ImageView
            android:id="@+id/profile_image3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:src="@drawable/newicon" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/register_routine_name"
        android:layout_width="292dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_textedit"
        android:ems="10"
        android:hint="@string/routine_name"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descname" />

    <EditText
        android:id="@+id/description_routine3"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:autofillHints=""
        android:background="@drawable/rounded_textedit"
        android:ems="10"
        android:hint="description of step 1"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text4" />

    <EditText
        android:id="@+id/description_routine2"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:autofillHints=""
        android:background="@drawable/rounded_textedit"
        android:ems="10"
        android:hint="description of step 2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text2" />

    <EditText
        android:id="@+id/description_routine5"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:autofillHints=""
        android:background="@drawable/rounded_textedit"
        android:ems="10"
        android:hint="description of step 3"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text3" />

    <TextView
        android:id="@+id/description_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/Steps2"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_routine3" />

    <TextView
        android:id="@+id/description_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/Steps1"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_routine_name" />

    <TextView
        android:id="@+id/add_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="Add Picture"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_routine_name" />

    <TextView
        android:id="@+id/description_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Steps3"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_routine2" />

    <Button
        android:id="@+id/add_routine2"
        android:layout_width="192dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_button"
        android:text="add routine"
        android:textColor="@color/white"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_routine5" />

</androidx.constraintlayout.widget.ConstraintLayout>